🐛 fix: prevent hover effects on mobile devices for floating tooltips

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -287,7 +287,7 @@ a.avatar-wrapper {
 }
 
 .group:hover .right-float-tooltip {
-  @apply inline-block;
+  @apply lg:inline-block;
 }
 
 .right-float-tooltip::after {
